src/test/ui/empty/empty-comment.stderr
error: unexpected end of macro invocation
  --> $DIR/empty-comment.rs:10:5
   |
LL | macro_rules! one_arg_macro {
   | -------------------------- when calling this macro
...
LL |     one_arg_macro!(/**/); //~ ERROR unexpected end
   |     ^^^^^^^^^^^^^^^^^^^^^ missing tokens in macro arguments

error: aborting due to previous error

